--- a/styles.css
+++ b/styles.css
@@ -85,10 +85,17 @@ body {
     margin-bottom: 30px;
 }
 
-.contact-info__block {
+.contact_info_container {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    align-items: center;
+}
+
+.contact-info__block {
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
 }
 
 .contact-info__block--center {
@@ -99,11 +106,6 @@ body {
     color: var(--secondary-text-color);
     text-decoration: none;
     display: flex;
-    justify-content: start;
-}
-
-.contact-info__item:not(:last-child) {
-    margin-bottom: 20px;
 }
 
 .contact-info__item-icon-wrapper {
@@ -124,8 +126,8 @@ body {
 
 .contact-info__avatar {
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
     object-fit: cover;
     border: 3px solid;
     border-color: var(--text-decoration-color);
